--- a/package.json
+++ b/package.json
@@ -13,27 +13,25 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-		"clsx": "2.1.1",
-		"effector": "23.3.0",
-		"effector-react": "23.3.0",
-		"loader-utils": "3.2.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-intersection-observer": "9.15.1",
-		"react-router": "7.2.0",
-		"react-router-dom": "7.2.0",
-		"react-scripts": "5.0.1"
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"axios": "^1.7.4",
+		"effector": "^23.2.2",
+		"effector-react": "^23.2.1",
+		"history": "^5.3.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.22.3",
+		"socket.io-client": "^4.7.5"
 	},
 	"devDependencies": {
-		"@types/node": "^22.13.5",
-		"@types/react": "18.2.38",
-		"@types/react-dom": "18.2.15",
-		"@vitejs/plugin-react": "^4.3.4",
-		"eslint": "^8.51.0",
-		"eslint-plugin-import-helpers": "^1.3.1",
-		"eslint-plugin-prettier": "^5.2.1",
-		"eslint-plugin-unused-imports": "^4.1.4",
-		"typescript": "4.4.4",
-		"vite": "^5.4.14"
+		"@emotion/babel-plugin": "^11.10.5",
+		"@types/node": "^18.11.14",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"@vitejs/plugin-react": "^4.2.1",
+		"rimraf": "^5.0.5",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.9"
 	}
 }
