--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,21 @@
 {
 	"compilerOptions": {
-		"target": "es2021",
-		"module": "commonjs",
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
+		"target": "ESNext",
+		"useDefineForClassFields": true,
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"allowJs": false,
 		"skipLibCheck": true,
-		"outDir": "./build",
-		"rootDir": "./",
-		"noEmit": false,
-		"typeRoots": ["node_modules/@types"],
-		"baseUrl": "./",
-		"allowJs": true,
-		"strictNullChecks": true,
+		"esModuleInterop": false,
+		"allowSyntheticDefaultImports": true,
 		"strict": true,
-		"alwaysStrict": true,
-		"strictPropertyInitialization": true
+		"forceConsistentCasingInFileNames": true,
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+		"jsx": "react-jsx",
+		"baseUrl": "./"
 	},
-	"exclude": ["build"],
-	"include": ["src/**/*"]
+	"include": ["src", "decs.d.ts"]
 }
