--- a/package.json
+++ b/package.json
@@ -15,22 +15,25 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
-		"axios": "^1.7.4",
 		"effector": "^23.2.2",
 		"effector-react": "^23.2.1",
 		"history": "^5.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.22.3",
-		"socket.io-client": "^4.7.5"
+		"react-intersection-observer": "^9.15.1",
+		"react-router-dom": "^6.29.0"
 	},
 	"devDependencies": {
 		"@emotion/babel-plugin": "^11.10.5",
 		"@types/node": "^18.11.14",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
+		"@typescript-eslint/eslint-plugin": "^8.24.1",
 		"@vitejs/plugin-react": "^4.2.1",
-		"rimraf": "^5.0.5",
+		"eslint": "^8.57.1",
+		"eslint-plugin-import-helpers": "^1.3.1",
+		"eslint-plugin-prettier": "^5.2.3",
+		"eslint-plugin-unused-imports": "^4.1.4",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.9"
 	}
